# hayashi-light-remote

./: README.md
.github/workflows/: rust.yml
api/: README.md  pyproject.toml  setup.py
api/hyshlr/: __init__.py
firmware/: Cargo.toml  makefile
firmware/.cargo/: config
firmware/src/: main.rs
ftdi/: README.md  flash.sh  ftdi.conf
hardware/: ft232.kicad_sch  hayashi-light-control.kicad_pcb  hayashi-light-control.kicad_pro  hayashi-light-control.kicad_sch  mcu.kicad_sch
meca/: enclosure.FCStd  enclosure.step
