[tool.poetry]
name = "donjon-hyshlr"
packages = [{ include = "hyshlr", from = "." }]
version = "1.0.0"
description = "Python3 API for the Hayashi light remote control dongle"
authors = ["Olivier Hériveaux <olivier.heriveaux@ledger.fr>"]
maintainers = ["Michael Mouchous <michael.mouchous@ledger.fr>"]
license = "LGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.urls]
Repository = "https://github.com/Ledger-Donjon/hayashi-light-remote"


[tool.poetry.dependencies]
python = ">=3.6"
pyserial = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
